# naimium

./: docker-compose.yml  env.example  manage.py  pyproject.toml
backend/api/v1/: urls.py
backend/api/v1/department/: routers.py  urls.py  utils.py
backend/api/v1/department/serializers/: __init__.py  department.py  employee.py
backend/api/v1/department/viewsets/: __init__.py  department.py  employee.py
backend/department/: admin.py  apps.py  utils.py
backend/department/migrations/: 0001_initial.py  0002_remove_department_employee_department_director_and_more.py  0003_alter_department_director.py
backend/department/models/: __init__.py  department.py  employee.py
backend/utils/: routers.py
naimium/: asgi.py  settings.py  urls.py  wsgi.py
